Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-26670

Wrong Path settings when debugging GUI app with GDB on windows

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 6.0.1
    • Qt Creator 6.0.0
    • Debugger
    • None
    • Windows 10 21H2
      Qt Creator 6.0.0
      Based on Qt 6.2.1 (MSVC 2019, 64 bit)
      Built on Dec 1 2021 16:19:37
      From revision 38b2bb9fb2

      Qt version 5.15.2, from MSYS2 mingw32
      GDB version 11.1
    • Windows
    • 352e66531e (qt-creator/qt-creator/master) 352e66531e (qt-creator/qt-creator/qmlprojectstorage)

      When starting debug session with GDB on GUI application, debugging fails with "DLL not found" errors. DLLs missing are Qt5Core, Qt5GUI, libgcc_s_dw2-1, libstdc++6.

      When running the same config without debug, everything works fine.

      When running with "Run in terminal" checked, everything works fine, too.

      Tested on Camera Example and on my application.

        1. attache-to-running-executable.png
          57 kB
          Cristian Adam
        2. env.txt
          4 kB
          Mikhail Ovchinnikov
        3. gdb11-qt5.15.2-msys2-x86.txt
          48 kB
          Cristian Adam
        4. mingw-path-to-kit-environment.png
          53 kB
          Cristian Adam
        5. msys2-qt5.15.2-x86-gdb11-debug-not-working.txt
          23 kB
          Cristian Adam
        6. msys2-qt5.15.2-x86-gdb11-debug-working.txt
          44 kB
          Cristian Adam
        7. noterminal.txt
          23 kB
          hjk
        8. terminal.txt
          75 kB
          hjk
        For Gerrit Dashboard: QTCREATORBUG-26670
        # Subject Branch Project Status CR V

            cadam Cristian Adam
            zafirus Mikhail Ovchinnikov
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes